local storage done

--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -1,3 +1,10 @@
 .list {
-  padding: 8px 16px;
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  padding: 8px 24px;
+  align-items: flex-start;
+}
+.itemTotal {
+  font-weight: 500;
 }
